[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://images/blueship.png" type="Texture" id=2]

[node name="PlayerShip" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 64.1372, -24.9683, 42.2905, -18.2157, 49.4403, -6.29926, 53.0153, -0.341057, 49.8376, 4.02831, 43.4821, 19.9169, 64.5345, 25.0806, 30.3741, 41.7636, -0.211426, 46.133, -30.7969, 41.3664, -64.5601, 26.6695, -55.8214, 9.5893, -55.8214, -10.6686, -63.7657, -26.16, -33.5774, -40.4597, -0.608643, -47.2123, 32.7573, -40.4597 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( 72, -24 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 72, 24 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 64, 0 )
